simstyle.css
  #background{
    display: table;
    height: 100%;
    width: 100%;
  }

  div{
  float:left;
  height:470px; 
  width:23%;
  padding:0 10px;
  }

  #simulation{ 
  height: 600px;
  width: 600px
  } 

  #canvas {
    border-style: outset;
    height: 600px;
    width: 600px;
  }

  #control{ 
  height: 800px;
  width:200px; 
  margin: 20px;
  } 

  h2{ 
  color: #000000; 
  text-align:left; 
  } 

  h3{ 
    color: #000000; 
    text-align:left; 
    } 

